# haunting

./: CHANGELOG.md  haunting.cabal
app/: Main.hs
app/Data/: Ghost.hs
app/Data/Ghost/: CSV.hs
app/Main/: Options.hs
src/Codec/: Ghost.hs
