cabal-version:      2.4
name:               haunting
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Analyze and organize MarioKart64 ghost data

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             José Manuel Calderón Trilla
maintainer:         jmct@jmct.cc

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haunting
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Data.Ghost

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , bytestring
                    , containers
                    , controller-pak
--                    , d3js
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
