cabal-version:      2.4
name:               haunting
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Analyze and organize MarioKart64 ghost data

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             José Manuel Calderón Trilla
maintainer:         jmct@jmct.cc

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Codec.Ghost
                      Data.Ghost

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , aeson
                    , base64
                    , binary
                    , bytestring
                    , cassava
                    , containers
                    , controller-pak
                    , text
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010


executable haunting
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Data.Ghost.CSV

                      Main.Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , aeson
                    , bytestring
                    , cassava
                    , containers
                    , controller-pak
                    , haunting
                    , optparse-applicative
--                    , d3js
                    , text
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
